--- a/src/pages/WorksGalery/Galery.scss
+++ b/src/pages/WorksGalery/Galery.scss
@@ -5,8 +5,11 @@
     background-size: 100%;
    // z-index: -1;
     height: 350px;
-    width: 100%;
+   // width: 100%;
     padding-top: 30px;
+   
+  
+
 
     &-offer{
       max-width: 1480px;
@@ -20,8 +23,16 @@
       text-transform: uppercase;
       //background-color: transparent;
       margin: auto;
+      @media (max-width: $xl) {
+        max-width: 1170px;
+      }
+    
+      @media (max-width: $lg) {
+        max-width: 925px;
+      } 
       justify-content: flex-start;
-      padding: 110px 0 0;     
+      padding: 110px 0 0;    
+     
       
     &-text {
       height: 64px;
@@ -93,7 +104,7 @@
 }
 //dealing with uneven height of pictures
 .offers-bottom .offers-item:nth-child(1){
-  background-size: 180%;
+  background-size: 192%;
 }
 
 .offers-bottom .offers-item:nth-child(1):hover{
@@ -110,6 +121,13 @@
 
 
 @media (max-width: $lg) {
+  
+  
+
+  .backgroundImg-offer{
+   // max-width: 925px;
+  }
+  
   .offers{
     &-top {
       grid-template-columns: 1fr 4fr 1fr;
@@ -130,7 +148,7 @@
   }
 
   .offers-bottom .offers-item:nth-child(1){
-    background-size: 245%;
+    background-size: 225%;
   }
 
   .offers-bottom .offers-item:nth-child(1):hover{
@@ -140,9 +158,11 @@
 @media (max-width: $xl) {
   .backgroundImg{
     height: 250px;
+    
 
     &-offer{
-      max-width: 1170px;
+      //max-width: 1170px;
+      //max-width: 925px;
       padding: 78px 0 0;
     }
   }
@@ -171,6 +191,13 @@
     max-width: 1480px;
     height: 100%;
     top: 50%;
+    @media (max-width: $xl) {
+      max-width: 1170px;
+    }
+  
+    @media (max-width: $lg) {
+      max-width: 925px;
+    } 
    
   }
 
@@ -212,7 +239,7 @@
 
   &-calculation{
     margin-top: 50px;
-    row-gap: 15px;
+    row-gap: 45px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -227,6 +254,14 @@
       &-link{
         font-weight: 900;
       font-size: 24px;
+      width: 265px;
+      padding: 20px 0;
+      margin-top: -20px;
+      margin-left: 25px;
+      background: $secondColor;
+      color: $darkColor;
+      text-align: center;
+      align-content: center;
       }
   }
 
@@ -288,7 +323,7 @@
 @media (max-width: $xl) {
     .slider-container{
       top: -100px;
-      max-width: 1170px;
+      //max-width: 1170px;
     }
     .slider-content{
       padding-top: 250px;
@@ -304,6 +339,9 @@
 
 @media (max-width: $lg) {
 
+  .slider-window{
+    width: 65%;
+  }
   .arrow {
     &-l {
       left: 8%;
