--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -26,11 +26,18 @@ nav {
   justify-content: space-between;
   width: 50%;
   margin: auto;
+  @media (max-width: $xs){
+    width: 90%;
+  }
+
 
   a {
     text-transform: uppercase;
     font-size: 24px;
     transition: 0.4s;
+    @media (max-width: $xs){
+      font-size: 18px;
+    }
 
     &:hover {
       color: $secondColor;
