demo for works page for mobile version

--- a/src/pages/Main/Carousel/Carousel.scss
+++ b/src/pages/Main/Carousel/Carousel.scss
@@ -210,10 +210,14 @@
         h2 {
           font-size: 65px;
         }
+        h4{
+          margin-right: -140px;
+        }
       }
     }
 }
   .arrow{
     display: none;
   }
+
 }
