--- a/src/pages/Works/Works.scss
+++ b/src/pages/Works/Works.scss
@@ -48,7 +48,7 @@
         background-repeat: no-repeat;
         height: 320px;
         background-position: center center;
-        background-size: 100%;
+        background-size: 100% ;
         overflow: hidden;
         transition: 0.6s ease-in-out;
 
@@ -101,5 +101,34 @@
             }
         }   
     }
+    }
+    @media (max-width: $xs){
+
+        
+        .apper_container-title{
+            margin: auto;
+            padding: 130px 0 100px 0;
+        }
+        .options_grid{
+            grid-template-columns: 1fr;
+            row-gap: 20px;
+        }
+        .options-option{
+            background-size: cover;
+        }
+
+        .options-option:first-child {
+            grid-column-start: 1;
+            grid-column-end: 2;
+                
+        }
+       
+        .backgroundImg-offer_button{
+            margin-left: 0;
+            padding: 10px 0;
+        }
+        .backgroundImg-offer-text{
+            margin-left: 50%;
+        }
     }
 
