--- a/src/pages/WorksGalery/Galery.scss
+++ b/src/pages/WorksGalery/Galery.scss
@@ -206,7 +206,7 @@
     align-items: center;
     flex-direction: row; /////////////
     padding-top: 350px;  /////////////// becouse background 350px
-    height: 619px; 
+   /// height: 619px; breaks modal icon when mob version
   }
 
   &-title{
@@ -229,6 +229,15 @@
     width: 50%;  
     overflow: hidden;
     margin: auto;
+    @media (max-width: $lg) {
+
+      .slider-window{
+        width: 65%;
+      }
+    }
+    @media (max-width: $xs){
+      width: 320px;
+    }
   }
 
   &-all-slides {
@@ -320,6 +329,97 @@
   }
 }
 
+@media (max-width: $xs) {
+  .backgroundImg-offer {
+
+    &_bottom{
+      flex-direction: column;
+      justify-content: center;
+      row-gap: 10px;
+    }
+
+    &-text{
+      width: 200px;
+      margin: auto;
+    }
+
+    &_bottom p{
+      font-size: 18px;
+      margin: auto;
+    }
+    
+    &_button{
+      margin: auto;
+      font-size: 18px;
+      padding: 10px 0;
+    }
+    
+  }
+  
+  .offers{
+    height: auto;
+    width: 320px;
+    row-gap: 50px;
+    margin: auto;
+    &-top {
+      grid-template-columns: 1fr ;
+      //row-gap: 50px;
+      margin-bottom: 50px;
+      
+    }
+    
+    &-bottom {
+      grid-template-columns: 1fr;
+      //row-gap: 100px;
+    }
+
+    &-item{
+      height: 300px;
+      background-size: cover;
+    }
+
+    &-item:nth-child(2){
+      background-size: cover;
+    }
+  }
+
+  .slider{
+
+    &-title{
+     // width: 200px;
+      //margin: auto;
+      margin-left: 25%;
+    }
+    &-wrapper{
+      position: fixed;
+      height: 100vh;
+    }
+
+    &-window{
+      //width: 320px;
+      margin-top: 0px;
+      //height: 300px;
+    }
+    &-all-slides{
+      height: 300px;
+    }
+
+    &-calculation{
+      row-gap: 20px;
+      padding-top: 20px;
+      width: 300px;
+      text-align: center;
+      margin: auto;
+
+      &-link{
+        margin: auto;
+        font-size: 18px;
+        padding: 10px 0;
+      }
+    }
+  }
+}
+
 @media (max-width: $xl) {
     .slider-container{
       top: -100px;
@@ -340,7 +440,7 @@
 @media (max-width: $lg) {
 
   .slider-window{
-    width: 65%;
+    //width: 65%;
   }
   .arrow {
     &-l {
