contacts page was added

--- a/src/pages/Works/Works.scss
+++ b/src/pages/Works/Works.scss
@@ -112,6 +112,7 @@
         .options_grid{
             grid-template-columns: 1fr;
             row-gap: 20px;
+            width: 88%;
         }
         .options-option{
             background-size: cover;
