--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -41,14 +41,20 @@ a {
 .container {
   max-width: 1480px;
   margin: auto;
+/////////////////////////////
 
 
+/////////////////////////////
   @media (max-width: $xl) {
     max-width: 1170px;
   }
 
   @media (max-width: $lg) {
     max-width: 925px;
+  }
+
+  @media (max-width: $xs) {
+    max-width: 350px;
   }
 }
 
