--- a/web/src/components/Header/Header.scss
+++ b/web/src/components/Header/Header.scss
@@ -18,6 +18,17 @@ header {
     left: 11%;
     top: 15px;
     z-index: 1;
+    @media (max-width: $xs){
+      width: 60px;
+      height: 60px;
+    }  
+  }
+}
+
+.logo svg{
+  @media (max-width: $xs){
+    width: 60px;
+    height: 60px;
   }
 }
 
@@ -27,7 +38,7 @@ nav {
   justify-content: space-between;
   width: 50%;
   margin: auto;
-  @media (max-width: $xs){
+  @media (max-width: $md){
    display: none;
   }
 
@@ -85,65 +96,72 @@ nav {
       left: 8%;
     }
   }
-  
 }
-@media (max-width: $xs){
+//@media (max-width: $xs){
+  @media  (max-width: $sm){
   .menu{
     display: flex;
+    width: 100%;
     align-items: center;
-   
+    text-align: center;
     position: fixed;
     top: 0px;
     right: 0px;
-    padding: 15px 40px;
+    padding: 10px 40px;
     //height: 150px;
     
   }
+  
   .mobMenu{
-    //display: none;
-    //display: flex;
+   //display: none;
+   //display: flex;
    position: absolute;
    top: 0;
-   right: 0;
+   //right: 0;
    transition: 0.6s ease-in-out;
-   padding: 20px 30px;
+   padding: 97px 0px 39px 20px;
    flex-direction: column;
+   width: 100%;
    //width: 40%;
    margin-right: 0;
    transition-property: width;
    transition-duration: .2s;
+   row-gap: 21px;
   
   }
   .burger_btn::after{
     content: " ";
     position: absolute;
-    bottom: 0;
-    width: 20px;
-    background-color: $secondTextColor;
-    height: 2px;
+    bottom: 4px;
+    width: 30px;
+    background-color: $secondColor;
+    height: 4px;
   }
   .burger_btn::before{
     content: " ";
     position: absolute;
     top: 0;
-    width: 20px;
-    background-color: $secondTextColor;
-    height: 2px;
+    width: 30px;
+    background-color: $secondColor;
+    height: 4px;
   }
   .burger_btn{
     display: block;
-    width: 20px;
-    height: 20px;
-    position: relative;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    z-index: 10;
     text-align: center;
   }
   .burger_btn span{
 
     content: " ";
     position: absolute;
-    top: 9px;
-    width: 20px;
-    background-color: $secondTextColor;
-    height: 2px;
+    top: 11px;
+    width: 30px;
+    background-color: $secondColor;
+    height: 4px;
   }
 }
