--- a/web/src/pages/Main/About/About.scss
+++ b/web/src/pages/Main/About/About.scss
@@ -1,5 +1,16 @@
 @import "../../../styles/palette.scss";
 
+
+.lastLogo  {
+  display: none;
+}
+.firstLogo{
+  display: none;
+}
+.about_circule{
+  display: none;
+}
+
 .about {
   margin-top: 50px;
   display: flex;
@@ -121,40 +132,226 @@
         }
 
         img {
-          width: 280px;
-          height: 280px;
+          width: 240px;
+          height: 240px;
         }
       }
     }
   }
 }
 
+
+@media (max-width: $md){
+
+
+  .about-item_circule{
+    width: 89px; ///????????
+   
+  }
+
+}
+
+
+@media (max-width: $sm){
+
+  .lastLogo{
+    display: block;
+    width: 400px;
+    margin: auto;
+    margin-bottom: -170px;
+    overflow: hidden;
+    background-color: $darkColor;
+}
+
+  .firstLogo{
+    display: block;
+    width: 100%;
+    position: absolute;
+    top: 800px;
+    z-index: 1;
+    
+    overflow: hidden;
+  }
+
+  .firstLogo img{
+    width: 300px;
+    height: 310px;
+    margin-left: 78%;
+  }
+  
+
+
+  .about{
+    width: 90%;
+    margin: 0 auto;
+    display: block; //
+
+    &_circule{
+      display: block;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      background: $secondColor;
+      margin-top: -20px;
+      position: absolute;
+      left: -42px;
+    }
+
+    & .vl{
+    display: block;
+    width: 35px;
+   height: 2000px;
+    position: absolute;
+    left: 57%;
+    margin-top: -120px;
+    z-index: 0;
+    }
+
+    & h2{
+      
+      width: 250px;
+      margin: auto;
+      font-size: 100px;
+    }
+
+  }
+
+
+
+  .about-item:nth-child(1){
+    margin-top: 50px;
+  }
+
+  
+
+
+
+  .about-item{
+    width: 100%;
+    margin: auto;
+    margin-bottom: 100px;
+
+   
+
+    &_circule{ 
+      display: none; ///
+     
+     }
+
+     
+
+    &-description{
+      overflow: hidden;
+      word-break: break-word;
+      width: fit-content;
+      text-align: center;
+      background-color: $darkColor;
+      margin-left: 0;
+      
+      &_subtitle{
+        font-size: 28px;
+        
+      }
+
+      &_text{
+        font-size: 28px;
+        margin-top: 35px;
+      }
+
+      &-withLogo{
+        text-align: center;
+        overflow: hidden;
+        margin-top: 0;
+      }
+
+      &-withLogo h6{
+        font-size: 28px;
+        margin-top: 35px;
+      }
+
+    }
+
+    &-description img{
+      display: none;
+    }
+  }
+}
+
 @media (max-width: $xs){
+
+  .firstLogo img{
+     margin-left: 63%;
+  }
+  .lastLogo{
+    width: 310px;
+    margin-bottom: -140px;
+    background-color: $darkColor;
+  }
+
+  
+
+  .about{
+    width: 85%;
+    margin: 0 auto;
+
+    & .vl{
+      left: 65%;
+      width: 25px;
+      height: 1400px;
+      margin-top: -100px;
+    }
+  }
+  
+  .about h2{
+    font-size: 90px;
+  }
+
   .about-item {
-    margin: 80px 0 0 -45px;
     flex-direction: column;
     row-gap: 160px;
+    font-size: 50px;
 
-   &_circule{ ////////////
-    ///margin: 0 0 0 auto;
-   }
+
+   
 
     &-description {
-      //width: 100%;
-      width: auto;
-    margin-left: -200px;
-    //word-break: break-all; 
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    background-color: $darkColor;
+      overflow: hidden;
+      word-break: break-word;
+      text-align: center;
+      background-color: $darkColor;
+      margin-left: 0;
+    
+   
+    &_title{
+      font-size: 40px;
+    }
 
-      &-withLogo {
+    &_subtitle{
+      font-size: 18px;
+      
+    }
 
-        h6 {
-          font-size: 32px;
-          margin-top: 30px;
-          line-height: 1.5;
-        }
+    &_text{
+      font-size: 18px;
+      margin-top: 20px;
+    }
+
+    &-withLogo{
+      text-align: center;
+      
+      
+    }
+
+    &-withLogo h6{
+      font-size: 18px;
+      margin-top: 25px;
+      
+    }
+  
+
+    &-description img{
+      display: none;
+    }
 
         img {
           display: none;
@@ -162,4 +359,4 @@
       }
     }
   }
-}
+
