--- a/web/src/pages/Main/Services/Services.scss
+++ b/web/src/pages/Main/Services/Services.scss
@@ -4,7 +4,8 @@
   height: 397px;
   display: grid;
   grid-column-gap: 5px;
-  margin-bottom: 5px;
+
+  padding-top: -200px;
 
   &-top {
     grid-template-columns: 1fr 5fr 1fr;
@@ -160,4 +161,30 @@
   transition: 0.6s ease-in-out;
   background-size: 110% 110%;
   
+}
+
+@media (max-width: $sm){
+  .services-bottom{
+    padding-top: 20px;
+  }
+}
+
+@media (max-width: $md){
+
+  .services{
+    width: 90%;
+    margin: auto;
+  }
+
+  .services-bottom{
+    padding-top: 20px;
+
+  }
+
+
+  .servicesLinks a {
+    font-size: 38px;
+    line-height: 1.5;
+    
+  }
 }
