--- a/web/src/pages/WorksGalery/Galery.scss
+++ b/web/src/pages/WorksGalery/Galery.scss
@@ -19,7 +19,7 @@
       line-height: 28px;
       letter-spacing: 0.05em;
       text-transform: uppercase;
-      //background-color: transparent;
+
       margin: auto;
       @media (max-width: $xl) {
         max-width: 1170px;
@@ -122,10 +122,6 @@
 @media (max-width: $lg) {
   
   
-
-  .backgroundImg-offer{
-   // max-width: 925px;
-  }
   
   .offers{
     &-top {
@@ -160,8 +156,6 @@
     
 
     &-offer{
-      //max-width: 1170px;
-      //max-width: 925px;
       padding: 78px 0 0;
     }
   }
@@ -283,15 +277,15 @@
 
   box-shadow: inset 0px -150px 50px -75px $darkColor;
 
-      img {
-        width: 100%;
-        height: 100%;
-        background: no-repeat center center;
-        background-size: cover;
-        overflow: hidden;
-        
-      }
+  
     }
+    .slide_body-circle img{
+      width: 100%;
+              height: 100%;
+              background: no-repeat center center;
+              background-size: cover;
+              overflow: hidden;
+          }
 
   
 
@@ -454,4 +448,11 @@
   }
 
   }
+
+  
+@media (max-width: $lg){
+  .arrow{
+    top: 40%;
+  }
+}
 
