--- a/web/src/styles/main.scss
+++ b/web/src/styles/main.scss
@@ -41,6 +41,7 @@ a {
 .container {
   max-width: 1480px;
   margin: auto;
+  overflow: hidden;
 /////////////////////////////
 
 
@@ -58,7 +59,7 @@ a {
   }
 
   @media (max-width: $xs) {
-    max-width: 350px;
+    max-width: 440px;
   }
 }
 
