--- a/web/src/pages/Catalog/Catalog.scss
+++ b/web/src/pages/Catalog/Catalog.scss
@@ -15,6 +15,11 @@
     z-index: -1;
 }
 
+.localContainer {
+    max-width: 1480px;
+    margin: auto;
+}
+
 .catalog {
   height: 397px;
   display: grid;
@@ -78,11 +83,23 @@
   }
 }
 
+@media (min-width: $xl) and (max-width: 1480px) {
+  .localContainer {
+    margin: auto 20px auto 20px !important;
+  }
+}
+
 @media (max-width: $xl) {
   .catalog {  
+    grid-column-gap: 20px;
     &-item {
       height: 500px;
     }
+  }
+
+  .localContainer {
+    max-width: $xl !important;
+    margin: auto 20px auto 20px !important;
   }
 }
 
@@ -112,11 +129,21 @@
 
 @media (max-width: $sm) {
   .catalog-wrapper{
-    margin-bottom: 70px;
+    margin-bottom: 370px;
   }
 
   .catalog {  
-    grid-column-gap: 20px;
+    grid-gap: 20px;
+
+    &-items {
+      grid-template-columns: 1fr 1fr;
+    }
+
+    &_resp{
+      grid-column: span 2;
+      margin: 0 auto 0 auto;
+      width: 426px;
+    }
 
     &-item {
       height: 370px;
@@ -134,8 +161,14 @@
     row-gap: 20px;
 
     &-items {
-      grid-template-columns: none;
-      grid-template-rows: 1fr 1fr 1fr;
+      grid-template-columns: none !important;
+      grid-template-rows: 1fr 1fr 1fr !important;
+    }
+
+    &_resp{
+      grid-column: 1;
+      margin-left: 0;
+      margin-right: 0;
     }
 
     &-item {
