--- a/web/src/pages/Kitchen/KitchenCalc.scss
+++ b/web/src/pages/Kitchen/KitchenCalc.scss
@@ -9,6 +9,11 @@
     width: 100%;
 }
 
+.localContainer {
+    max-width: 1480px;
+    margin: auto;
+}
+
 .calc-header{
     background-image: url("../../assets/catalog_menu/background-1.png");
     background-repeat: no-repeat;
