--- a/web/src/pages/Stairs/StairsCalc.scss
+++ b/web/src/pages/Stairs/StairsCalc.scss
@@ -9,6 +9,11 @@
     width: 100%;
 }
 
+.localContainer {
+    max-width: 1480px;
+    margin: auto;
+}
+
 .calc-header{
     background-image: url("../../assets/catalog_menu/background-1.png");
     background-repeat: no-repeat;
@@ -293,7 +298,7 @@
 
 @media (max-width: $lg) {
     .wrapper-stairs{
-      margin-bottom: 400px;
+      margin-bottom: 600px;
     }
 
   }
