--- a/web/src/styles/main.scss
+++ b/web/src/styles/main.scss
@@ -41,7 +41,7 @@ a {
 .container {
   max-width: 1480px;
   margin: auto;
-  overflow: hidden;
+ // overflow: hidden;
 /////////////////////////////
 
 
