--- a/web/src/pages/Contacts/Contacts.scss
+++ b/web/src/pages/Contacts/Contacts.scss
@@ -10,6 +10,11 @@
     z-index: -1;
 }
 
+.contactsWrapper{
+    width: 85%;
+    margin: auto;
+}
+
 .text{
     font-family: $primaryFont;
     font-style: normal;
@@ -54,7 +59,3 @@
 }
 
 
-@media (max-width: $xs) {
-   
-    
-  }
