--- a/web/src/pages/Main/About/About.scss
+++ b/web/src/pages/Main/About/About.scss
@@ -156,12 +156,19 @@
 
   .lastLogo{
     display: block;
-    width: 400px;
+    max-width: 80%;
     margin: auto;
-    margin-bottom: -170px;
+    //margin-bottom: -170px;
     overflow: hidden;
     background-color: $darkColor;
 }
+
+  .lastLogo img{
+    width: 100%;
+    //height: 310px;
+    margin: auto;
+    
+  }
 
   .firstLogo{
     display: block;
@@ -283,7 +290,7 @@
      margin-left: 63%;
   }
   .lastLogo{
-    width: 310px;
+   // width: 310px;
     margin-bottom: -140px;
     background-color: $darkColor;
   }
