galery modernisation for mob version

--- a/web/src/pages/Main/Carousel/Carousel.scss
+++ b/web/src/pages/Main/Carousel/Carousel.scss
@@ -214,10 +214,10 @@
         }
         h2 {
           font-size: 105px;
-          
+          margin-top: -60px;
         }
         h4{
-          margin-right: -200px;
+          margin-right: -102px;
           margin-top: 25px;
         }
        
