--- a/web/src/pages/WorksGalery/Galery.scss
+++ b/web/src/pages/WorksGalery/Galery.scss
@@ -10,7 +10,8 @@
 
 
     &-offer{
-      max-width: 1480px;
+      //max-width: 1480px;
+      width: 95%;
       height: 28px;
       font-family: $primaryFont;
       font-style: normal;
@@ -76,11 +77,17 @@
 .offers{
   height: 307px;
   display: grid;
+  width: 95%;
+  margin: auto;
   grid-column-gap: 5px;
 
   &-top {
     grid-template-columns: 1fr 5fr 1fr;
     margin-bottom: 5px;
+
+    .offers-item:nth-child(3){
+      background-size: 203%;
+    }
   }
 
   &-bottom {
@@ -134,7 +141,7 @@
   }
 
   .offers-item{
-    background-size: 180% ;
+    background-size: 175% ;
     height: 100% ;
   }
 
@@ -143,7 +150,7 @@
   }
 
   .offers-bottom .offers-item:nth-child(1){
-    background-size: 225%;
+    background-size: 282%;
   }
 
   .offers-bottom .offers-item:nth-child(1):hover{
@@ -237,6 +244,16 @@
     height: 620px;
     display: flex;
     transition: 1.6s cubic-bezier(0.33, 0.11, 0.5, 1.03);
+
+    .slide img{
+      
+      background: no-repeat center center;
+      background-size: cover;
+      overflow: hidden;
+      width: 100%;
+      height: 100%;
+          
+         }
   }
 
   &-calculation{
@@ -277,15 +294,12 @@
 
   box-shadow: inset 0px -150px 50px -75px $darkColor;
 
-  img{
-    background: no-repeat center center;
-              background-size: cover;
-              overflow: hidden;
-              width: 100%;
-              height: 100%;
-  }
+
   
     }
+
+
+
     .slide_body-circle img{
       width: 100%;
               height: 100%;
@@ -327,6 +341,62 @@
         
   z-index: 6;
   }
+}
+
+@media (max-width: $sm){
+  .backgroundImg-offer {
+
+    &-text{
+      text-align: center;
+      margin-bottom: 10px;
+    }
+
+    &_bottom{
+      width: 100%;
+      margin: auto;
+      flex-direction: column;
+      justify-content: center;
+      row-gap: 35px;
+      align-items: center;
+     
+    }
+
+    &_button{
+      padding: 10px 0;
+    }
+}
+
+.offers{
+
+  &-top{
+
+    .offers-item:nth-child(3){
+      background-size: 260% 100%;
+    }
+    
+  }
+
+  &-bottom{
+
+    .offers-item:nth-child(1){
+      background-size: 300% 100%;
+    }
+    
+  }
+
+  &-item{
+    background-size: 233% 100%;
+  }
+  
+  &-item:nth-child(2){
+    background-size: 100% 100%;
+  }
+
+  &-item:nth-child(3){
+    background-size: 260% 100%;
+  }
+  
+}
 }
 
 @media (max-width: $xs) {
