--- a/web/src/components/Header/Header.scss
+++ b/web/src/components/Header/Header.scss
@@ -142,8 +142,8 @@ nav {
    position: absolute;
    top: 0;
    //right: 0;
-   transition: 0.6s ease-in-out;
-   padding: 97px 0px 39px 20px;
+   padding: 97px 0px;
+   //padding: 97px 0px 39px 20px;
    flex-direction: column;
    width: 100%;
    //width: 40%;
