--- a/web/src/pages/Main/Carousel/Carousel.scss
+++ b/web/src/pages/Main/Carousel/Carousel.scss
@@ -20,7 +20,15 @@
     transition: 1.6s cubic-bezier(0.33, 0.11, 0.5, 1.03);
   }
 }
-
+//////////////////////////////////////////////////////////////////////////////////////
+.slide_body-circle img{
+  width: 100%;
+          height: 100%;
+          background: no-repeat center center;
+          background-size: cover;
+          overflow: hidden;
+      }
+/////////////////////////////////////////////////////////////////////////////////////
 .slide {
   background: no-repeat center center fixed;
   background-size: cover;
