--- a/web/src/pages/WorksGalery/Galery.scss
+++ b/web/src/pages/WorksGalery/Galery.scss
@@ -210,15 +210,21 @@
      height: 505px;
     }
   
+
     .slide div {
       background: no-repeat center center;
-      background-size: cover;
+      background-size: cover ;
       overflow: hidden;
       width: 100%;
       height: 100%;
           
          }
+     .slide:nth-child(1) div{
+          background-size: 100% 185%;
+        }
   }
+
+ 
 
   &-calculation{
     margin-top: 50px;
@@ -438,7 +444,7 @@
   }
 
   &-item{
-    background-size: 233% 100%;  
+    background-size: 144% 100%;  ///233% 100%
     
   }
   
@@ -513,7 +519,7 @@
 
 
       .offers-item:nth-child(3){
-        background-size:  100% 100%;
+        background-size:  100% 145%;
       }
       
     }
@@ -531,11 +537,11 @@
   
     &-item{
       height: 300px;
-      background-size: 100% 146% ;
+      background-size: 100% 190% ;
 
       &:nth-child(1):hover{
         transition: 0s ease-in-out;
-        background-size: 100% 146%; 
+        background-size: 100% 175%; 
       } 
       &:hover {
         transition: 0s ease-in-out;
