email field and respons changes

--- a/web/src/pages/Catalog/Catalog.scss
+++ b/web/src/pages/Catalog/Catalog.scss
@@ -172,7 +172,10 @@
     }
 
     &-item {
-      height: 460px;
+      margin-left: auto;
+      margin-right: auto;
+      height: 460px !important;
+      width: 360px !important;
     }
   }
   
