--- a/web/src/pages/Contacts/Contacts.scss
+++ b/web/src/pages/Contacts/Contacts.scss
@@ -32,6 +32,11 @@
     z-index: 2;
 }
 
+.contacts {
+    font-size: 44px;
+    padding-top: 100px;
+}
+
 .gridBlock {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -48,7 +53,7 @@
 }
 .email{
     font-size: 24px;
-    padding-top: 150px;
+    padding-top: 25px;
 }
 .media-title{
     font-size: 36px;
@@ -219,9 +224,12 @@
         grid-template-rows: 1fr 1fr;
     }
 
+    .contacts {
+        padding-top: 20px;
+    }
+
     .email{
         font-size: 24px;
-        padding-top: 20px;
     }
 
     .wrapperContacts {
