--- a/web/src/pages/Kitchen/KitchenCalc.scss
+++ b/web/src/pages/Kitchen/KitchenCalc.scss
@@ -335,6 +335,54 @@
     }
 }
 
+@media (max-width: $sm) {
+    .area {
+
+        &-title{
+            margin-left: 10px !important;
+        }
+    }
+
+    .calc {
+    
+        &-title {
+            width: auto !important;
+            font-size: 36px !important;
+        }
+    }
+
+    .material{
+        display: flex;
+        margin: 0 80px 0 80px;
+        height: 56px;
+        background-color: $unhoveredColor;
+        align-items: center;
+        font-family: $primaryFont;
+        font-weight: 600;
+    
+        &-radio {
+    
+            
+            &:hover {
+                margin: 0 0 0 15px !important;
+            }
+    
+            &:checked {
+                margin: 0 0 0 15px !important;
+            }
+        }
+    
+        &-name {
+            margin-left: 10px !important;
+        }
+
+        &-price {
+            margin-right: 15px !important;
+            font-size: 18px !important;
+        }
+    }
+}
+
 @media (max-width: $xs) {
     .calc {
         height: 397px;
@@ -357,6 +405,8 @@
             margin: 20px 0 26px 20px !important;
             text-align: left !important;
         }
+
+        
     }
 
     .material{
@@ -374,6 +424,10 @@
 
     .area {
         margin: 0 20px 0 20px !important;
+
+        &-title{
+            margin-left: 15px !important;
+        }
     }
 
     .total-price {
