--- a/web/src/pages/Main/About/About.scss
+++ b/web/src/pages/Main/About/About.scss
@@ -12,7 +12,8 @@
 }
 
 .about {
-  margin-top: 50px;
+  //margin-top: 50px;
+  padding-top: 60px;
   display: flex;
   width: 90%;///
     margin: auto;///
