--- a/web/src/pages/Kitchen/KitchenCalc.scss
+++ b/web/src/pages/Kitchen/KitchenCalc.scss
@@ -1,7 +1,7 @@
 @import "../../styles/palette.scss";
 
 .wrapper-kitchen{
-    margin-bottom: 550px;
+    margin-bottom: 350px;
 }
 
 .header {
@@ -53,9 +53,9 @@
       grid-template-columns: 1fr 1fr;
     }
 
-    &-calc_block {
+    &-calc_block_kitchen {
         margin-top: 50px;
-        height: 832px;
+        height: 666px;
         background: rgba(201, 173, 152, 0.05);
     }
 
@@ -67,78 +67,17 @@
         margin: 20px 84px 26px 0;
     }
 
-    &-img {
+    &-img_kitchen {
         margin-top: 50px;
-        height: 832px;
+        height: 666px;
+        max-width: 767px;
+        width: 100%;
     }
-}
-
-.material{
-    display: flex;
-    margin: 0 80px 0 80px;
-    height: 56px;
-    background-color: $unhoveredColor;
-    align-items: center;
-    font-family: $primaryFont;
-    font-weight: 600;
-
-    &-radio {
-        visibility: hidden;
-
-        
-        &:hover {
-            visibility: visible;
-            margin: 0 0 0 26px;
-            appearance: none;
-            border: 2.5px solid $darkColor;
-            border-radius: 50%;
-            background-clip: content-box;
-            padding: 2px;
-            height: 18px;
-            width: 18px;
-        }
-
-        &:checked {
-            visibility: visible;
-            margin: 0 0 0 26px;
-            appearance: none;
-            border: 2.5px solid $darkColor;
-            background-color: $darkColor;
-            border-radius: 50%;
-            background-clip: content-box;
-            padding: 2px;
-            height: 18px;
-            width: 18px;
-        }
-    }
-
-    &-name {
-        margin-left: 26px;
-        font-size: 18px;
-        line-height: 21px;
-        letter-spacing: 0.05em;
-        color: $darkColor;
-    }
-
-    &-price {
-        font-size: 24px;
-        line-height: 28px;
-        letter-spacing: 0.05em;
-        color: $darkColor;
-        margin-left: auto;
-        margin-right: 30px;
-    }
-    &:hover {
-        background-color: $secondMainTextColor;
-    }
-}
-
-.material_active {
-    background-color: $secondMainTextColor;
 }
 
 .area {
     display: grid;
+    grid-row-gap: 5px;
     grid-template-columns: 3fr 3fr 1fr;
     height: 56px;
     margin: 0 80px 0 80px;
@@ -329,7 +268,7 @@
             grid-template-columns: 1fr !important;
           }
 
-        &-img {
+        &-img_kitchen {
             display: none;
         }
     }
